--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,28 @@ body {
     width: 100%;
 }
 
+.gridContainer{
+    display: flex;
+}
+
 .container {
-    padding: 2px;
+    margin: 0 auto;
     display: inline-grid;
     grid-template-columns: repeat(16, 2fr);
     grid-template-rows: repeat(16, 2fr);
-    border: 2px solid black;
+    border: 3px solid black;
     border-radius: 3px;
     height: 575px;
     width: 575px;
+    justify-content: center;
 }
 
-.container div {
-    width: 30px;
-    height: 30px;
+.gridSquare {
     border: 1px solid black;
     background-color: white;
-    margin-left: 2px;
-    margin-top: 2px;
+}
+
+.changeColor{
+    background-color: grey;
+    border: 1px solid black;
 }
