--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,13 @@ body {
     display: flex;
 }
 
+h1{
+    text-align: center;
+    font-style: italic;
+    font-weight: 800;
+    font-size: 46px;
+}
+
 .container {
     margin: 0 auto;
     display: inline-grid;
@@ -28,4 +35,17 @@ body {
 .changeColor{
     background-color: grey;
     border: 1px solid black;
+}
+.gridSize{
+    text-align: center;
+    margin: 20px;
+    align-content: center;
+}
+
+.gridSize label{
+    font-size: 24px;
+}
+
+.gridSize input{
+    width: 150px;
 }
