--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h1{
     border-radius: 3px;
     height: 575px;
     width: 575px;
-    justify-content: center;
+    
 }
 
 .gridSquare {
@@ -33,7 +33,7 @@ h1{
 }
 
 .changeColor{
-    background-color: grey;
+    background-color: rgb(72, 72, 189);
     border: 1px solid black;
 }
 .gridSize{
